--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,5 +1,7 @@
 .Layout {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
+    display: grid;
+    grid-template-rows: 168px ;
+    grid-gap: 0;
+    height: 100vh;
+    align-items: center;
 }
