--- a/src/containers/HeroesMaintain/HeroesMaintain.css
+++ b/src/containers/HeroesMaintain/HeroesMaintain.css
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100%;
     margin: 0;
-    display: flex;
-    flex-flow: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 96px 1fr 96px;
+    /*position: relative;*/
 }
