--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -5,7 +5,8 @@
     grid-template-rows: 75px;
     grid-column-gap: 45px;
     justify-content: center;
-    justify-items:center;
+    /*justify-items:center;*/
+    align-content: center;
     height: 96px;
     width: 100%;
     /*position:fixed;*/
@@ -14,6 +15,7 @@
     /*margin-top: -96px;*/
     /*postion:fixed;*/
 
+    grid-area: menu;
 }
 .Menu div {
     margin:0 auto;
